--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "rollup-plugin-typescript2": "^0.27.0",
+    "sirv-cli": "^0.4.4",
+    "typescript": "^3.8.3"
   }
 }
